# b_all_sinxr

./: .env.example  .gitignore  DEPLOY_GITHUB.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: scrape.yml
scraper/: cli.py  config.py  logger.py
scraper/db/: models.py  repository.py
scraper/pages/: base_page.py  dashboard_page.py  login_page.py  orders_page.py
scraper/scraper/: __init__.py  keycrm_scraper.py
